--- a/views/index1.ejs
+++ b/views/index1.ejs
@@ -1,20 +1,34 @@
-<%- include('./partials/header.ejs')%>
-<%- include('./partials/navbar.ejs')%>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/x-icon" href="images/download.jpg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CRUD</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <%- include('./partials/navbar.ejs')%>
 
-<div class="container mt-5">
-  <div class="row">
-    <h1>Home Page</h1>
-    <hr />
-    <p>
-      CRUD Operations with User Authorization in EJS.
-    </p>
-  </div>
-  <button type="submit" class="btn btn-primary">
-    <a class="nav-link" href="/registration">Register</a>
-  </button>
-  <button type="submit" class="btn btn-primary">
-    <a class="nav-link" href="/login">Login</a>
-  </button>
-</div>
+    <div class="container mt-5">
+      <div class="row">
+        <h1>Home Page</h1>
+        <hr />
+        <p>CRUD Operations with User Authorization in EJS.</p>
+      </div>
+      <button type="submit" class="btn btn-primary">
+        <a class="nav-link" href="/registration">Register</a>
+      </button>
+      <button type="submit" class="btn btn-primary">
+        <a class="nav-link" href="/login">Login</a>
+      </button>
+    </div>
 
-<%- include('./partials/footer.ejs')%>
+    <%- include('./partials/footer.ejs')%>
+  </body>
+</html>
